--- a/docs/docs/api/template-context.mdx
+++ b/docs/docs/api/template-context.mdx
@@ -3,11 +3,12 @@ sidebar_position: 3
 ---
 
 import { Text } from '@site/docs/components/text';
+import { Utils } from '@site/docs/components/utils';
 import { Example } from '@site/docs/components/example';
 import { Dot } from '@site/docs/components/dot';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import CodeBlock from '@theme/CodeBlock';
+import Heading from '@theme/Heading';
 
 # Template Context
 
@@ -171,3 +172,15 @@ you can access the users answer with:
 ```
 
 </Example>
+
+## utils
+
+```ts title="Type"
+{ [p: string]: () => any }
+```
+
+```text title="Usage"
+{{= tps.utils }}
+```
+
+<Utils toc={toc} />
