--- a/docs/docs/api/template-context.mdx
+++ b/docs/docs/api/template-context.mdx
@@ -3,12 +3,11 @@ sidebar_position: 3
 ---
 
 import { Text } from '@site/docs/components/text';
-import { Utils } from '@site/docs/components/utils';
+import { TemplatesContextUtils } from '@site/docs/components/templatesContextUtils';
 import { Example } from '@site/docs/components/example';
 import { Dot } from '@site/docs/components/dot';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import Heading from '@theme/Heading';
 
 # Template Context
 
@@ -183,4 +182,4 @@ you can access the users answer with:
 {{= tps.utils }}
 ```
 
-<Utils toc={toc} />
+<TemplatesContextUtils />
