Small doc fixes in various places

--- a/docs/docs/api/tpsrc/index.mdx
+++ b/docs/docs/api/tpsrc/index.mdx
@@ -15,10 +15,12 @@ TemplateConfig;
 Template configuration. See [Template Config API](./template) for template
 options
 
-```json title=".tpsrc"
+```json title=".tps/.tpsrc"
 {
+  // highlight-start
   "react-component": {
     /* Templates configuration ... */
   }
+  // highlight-end
 }
 ```
