--- a/docs/docs/main/templates/react-component.mdx
+++ b/docs/docs/main/templates/react-component.mdx
@@ -51,6 +51,10 @@ command. It lets you duplicate the template into your project and customize it
 as you want.
 
 ```bash
+# if your not initialized run
+tps init
+
+# copy template
 tps copy react-component
 ```
 
@@ -71,7 +75,7 @@ Produces:
 	| - Nav.css
 ```
 
-### use options
+### options
 
 ```bash
 tps react-component Nav --css --cssType=less --test
