React component: support storybook and typescrpt

--- a/docs/docs/main/templates/react-component.mdx
+++ b/docs/docs/main/templates/react-component.mdx
@@ -46,9 +46,9 @@ Produces:
 
 ## Copy
 
-If you like this template but want to change a few things, just use the copy
-command. It lets you duplicate the template into your project and customize it
-as you want.
+If you like this template, but want to modify a few things use the copy command.
+It allows you to duplicate the template into your project and tailor it to your
+needs.
 
 ```bash
 # if your not initialized run
