Update react component docs

--- a/docs/docs/main/templates/react-component.mdx
+++ b/docs/docs/main/templates/react-component.mdx
@@ -3,6 +3,13 @@ import { Example } from '@site/docs/components/example';
 
 # react-component
 
+<p style={{ fontSize: 20 }}>
+  🎉 Supports Typescript <br />
+  📗 Supports Storybook <br />
+  🧪 Supports Unit tests <br />
+  💅 Supports multiple CSS languages
+</p>
+
 :::caution
 
 [Install templates](../intro#installation) to use this template
@@ -21,6 +28,7 @@ tps react-component <name>
 	| - <name>.js
 	| - <name>.css (optional)
 	| - <name>.test.js (optional)
+	| - <name>.stories.js (optional)
 ```
 
 <Example>
