Fix install section of react component

--- a/docs/docs/main/templates/react-component.mdx
+++ b/docs/docs/main/templates/react-component.mdx
@@ -3,18 +3,12 @@ import { Example } from '@site/docs/components/example';
 
 # react-component
 
-<p style={{ fontSize: 20 }}>
-  🎉 Supports Typescript <br />
-  📗 Supports Storybook <br />
-  🧪 Supports Unit tests <br />
-  💅 Supports multiple CSS languages
-</p>
-
-:::caution
-
-[Install templates](../intro#installation) to use this template
-
-:::
+<div class="row" style={{ fontSize: 20 }}>
+  <div class="col col--6">🎉 Supports Typescript</div>
+  <div class="col col--6">📗 Supports Storybook</div>
+  <div class="col col--6">🧪 Supports Unit tests</div>
+  <div class="col col--6">💅 Supports multiple CSS languages</div>
+</div>
 
 ## Usage
 
@@ -47,6 +41,16 @@ Produces:
 ```
 
 </Example>
+
+## Installation
+
+This templates is a part of Templates library. If you've already installed
+Templates, you'll have instant access to this template, and you can disregard
+this command.
+
+```bash
+npm i -g templates-mo
+```
 
 ## Options
 
