--- a/docs/docs/main/templates/react-component.mdx
+++ b/docs/docs/main/templates/react-component.mdx
@@ -3,11 +3,11 @@ import { Example } from '@site/docs/components/example';
 
 # react-component
 
-<div class="row" style={{ fontSize: 20 }}>
-  <div class="col col--6">🎉 Supports Typescript</div>
-  <div class="col col--6">📗 Supports Storybook</div>
-  <div class="col col--6">🧪 Supports Unit tests</div>
-  <div class="col col--6">💅 Supports multiple CSS languages</div>
+<div className="row" style={{ fontSize: 20 }}>
+  <div className="col col--6">🎉 Supports Typescript</div>
+  <div className="col col--6">📗 Supports Storybook</div>
+  <div className="col col--6">🧪 Supports Unit tests</div>
+  <div className="col col--6">💅 Supports multiple CSS languages</div>
 </div>
 
 ## Usage
