typo: thay -> that

--- a/docs/docs/main/create-new-template/dynamic-files.mdx
+++ b/docs/docs/main/create-new-template/dynamic-files.mdx
@@ -417,7 +417,7 @@ Def files are files inside your packages that have a `.def` extension.
 
 If you want your def files to be accessable anywhere put them inside your
 `default` package. If your def file is only used inside a specific package then
-place it inside thay package
+place it inside that package
 
 :::caution
 
