added template to index file

--- a/docs/docs/main/templates/index.mdx
+++ b/docs/docs/main/templates/index.mdx
@@ -12,3 +12,4 @@ collaborate to bring even more value to the community!
 :::
 
 - [react-component](./templates/react-component)
+- [yargs-cli-cmd](./templates/yargs-cli-cmd)
