--- a/docs/docs/main/templates/react-component.mdx
+++ b/docs/docs/main/templates/react-component.mdx
@@ -144,7 +144,7 @@ either on the command line or in your `.tps/.tpsrc` file.
 
 <TabItem value="cli">
 
-lets say your project always uses a `tsx` extension for its components. You can
+Lets say your project always uses a `tsx` extension for its components. You can
 add `tsx` to the `extension` answer when creating a new instance and you will no
 longer be prompted that question
 
@@ -171,7 +171,7 @@ If you havent already initialize your repo:
 tps init
 ```
 
-lets say your project always uses a `tsx` extension for its components. You can
+Lets say your project always uses a `tsx` extension for its components. You can
 add `tsx` to the `extension` answer.
 
 ```json title=".tps/.tpsrc"
@@ -209,7 +209,7 @@ tps react-component Nav --typescript --extension=tsx
 tps react-component Nav --typescript -e tsx
 ```
 
-produces:
+Produces:
 
 ```txt
 | - NaV
@@ -250,7 +250,7 @@ questions or have to supply the two flags to the cli command
 tps react-component Nav
 ```
 
-would produce:
+Would produce:
 
 ```txt
 | - NaV
