--- a/docs/docs/api/template.mdx
+++ b/docs/docs/api/template.mdx
@@ -37,7 +37,7 @@ interface TemplateOptions {
 	extendDest?: string;
 	wipe?: boolean;
 	force?: boolean;
-	NewFolder?: boolean;
+	newFolder?: boolean;
 }
 ```
 
