--- a/docs/docs/api/tpsrc/index.mdx
+++ b/docs/docs/api/tpsrc/index.mdx
@@ -1,4 +1,8 @@
-# Templates Configuration
+---
+sidebar_label: Templates Configuration
+---
+
+# Templates Configuration (.tpsrc)
 
 ```ts title="Type"
 interface TemplatesConfig {
