--- a/docs/docs/main/create-new-template/dynamic-files.mdx
+++ b/docs/docs/main/create-new-template/dynamic-files.mdx
@@ -91,6 +91,10 @@ any valid JavaScript code, enabling the creation of variables, functions, and
 various other possibilities. **The semi-colon at the end of the expression is
 mandatory!**
 
+<Tabs>
+
+<TabItem value="inline" label="Inline">
+
 <Dot>
 
 ```text
@@ -116,6 +120,14 @@ hey
 </Dot>
 
 </Example>
+
+</TabItem>
+
+<TabItem value="block" label="Block">
+
+</TabItem>
+
+</Tabs>
 
 ### Interpolation
 
