Allow tps.a in file names and file contents

--- a/docs/docs/api/template-context.mdx
+++ b/docs/docs/api/template-context.mdx
@@ -146,6 +146,10 @@ const {{= tps.name}} = (props) => {
 {{= tps.answers }}
 ```
 
+```text title="Alias"
+{{= tps.a }}
+```
+
 The `tps.answers` object holds the answers to the prompts in your templates.
 Each prompt's value is stored with a property name that corresponds to the name
 you assigned to the prompt in your `settings.json` file.
