include tps.u and tpds.utils

--- a/docs/docs/api/template-context.mdx
+++ b/docs/docs/api/template-context.mdx
@@ -142,7 +142,11 @@ const {{= tps.name}} = (props) => {
 
 ## Answers
 
-```text
+```ts title="Type"
+{ [p: string]: any }
+```
+
+```text title="Usage"
 {{= tps.answers }}
 ```
 
@@ -184,6 +188,10 @@ you can access the users answer with:
 
 ```text title="Usage"
 {{= tps.utils }}
+```
+
+```text title="Alias"
+{{= tps.a }}
 ```
 
 <TemplatesContextUtils />
