added test cases for tps.u and tps.utils

--- a/docs/docs/main/create-new-template/dynamic-files.mdx
+++ b/docs/docs/main/create-new-template/dynamic-files.mdx
@@ -354,8 +354,8 @@ is `server.js`.
 
 ### File names
 
-File names can also take advantage of using dot. By putting the
-`{{=<some-value>}}` in the filename you can get dynamic filenames.
+File names can also take advantage of doT. You can use any valid doT syntax
+inside of file names
 
 <Example open>
 
