--- a/docs/docs/api/template-context.mdx
+++ b/docs/docs/api/template-context.mdx
@@ -190,7 +190,7 @@ you can access the users answer with:
 ```
 
 ```text title="Alias"
-{{= tps.a }}
+{{= tps.u }}
 ```
 
 <TemplatesContextUtils />
