--- a/docs/docs/main/create-new-template/dynamic-files.mdx
+++ b/docs/docs/main/create-new-template/dynamic-files.mdx
@@ -432,7 +432,7 @@ name
 ```
 
 ```text
-{{#def.someDef }}.js
+{{#def.name }}.js
 ```
 
 If `name` was `nav` and `capitalize` was true then the result would be:
