fix issue in yargs-cli-cmd

--- a/docs/docs/main/templates/yargs-cli-cmd.mdx
+++ b/docs/docs/main/templates/yargs-cli-cmd.mdx
@@ -20,10 +20,12 @@ import TabItem from '@theme/TabItem';
 Create a yargs cli command module using
 [ESM syntax](https://github.com/yargs/yargs/blob/main/docs/advanced.md#example-command-hierarchy-using-indexmjs).
 
-:::info For template versions prior to 1.0.24, a new folder is created when
-generating a new instance of this template. This issue has been resolved in
-version 1.0.24. If you are using an incompatible version and wish to avoid a new
-folder being created, please refer to our guide on
+:::info
+
+For template versions prior to 1.0.24, a new folder is created when generating a
+new instance of this template. This issue has been resolved in version 1.0.24.
+If you are using an incompatible version and wish to avoid a new folder being
+created, please refer to our guide on
 [preventing new folder](/templates/docs/main/templates/yargs-cli-cmd#dont-use-a-new-folder).
 
 :::
@@ -91,8 +93,7 @@ Produces:
 ```txt
 | - cli/
 	| - commands/
-		| - publish/
-			| - publish.js
+		| - publish.js
 ```
 
 ```js title="cli/commands/publish.js"
